# SYMPHONY

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Dependencies  Externals  Externals.release  Externals.stable  INSTALL  INSTALL.md  LICENSE  Makefile  Makefile.am  Makefile.dist  Makefile.in  Osi.patch  README  README-2.8.1  README-3.0.1  README-3.0.2  README-4.0  README-5.0  README.md  TODO  applications.htm  appveyor.yml  config  configure  configure.ac  faq.htm  index.htm  links.htm  reference.htm  reformat  reformat.awk  symphony-app.pc.in
SYMPHONY/: Makefile  Makefile.am  Makefile.in  Makefile.orig  README  TODO  config  configure  configure.ac  run.sh  symphony-app.pc.in  symphony-uninstalled.pc.in  symphony.pc.in
SYMPHONY/Applications/: INSTALL  Makefile.Applications.in
SYMPHONY/Applications/CNRP/: INSTALL  Makefile.in  Makefile.orig
SYMPHONY/Applications/MATCH/: INSTALL  LICENSE  Makefile  Makefile.in  Makefile.orig
SYMPHONY/Applications/MCKP/: INSTALL  Makefile  Makefile.in  Makefile.orig  README  mckp_main.c
SYMPHONY/Applications/MPP/: INSTALL  Makefile  Makefile.in  Makefile.orig
SYMPHONY/Applications/SPP/: INSTALL  Makefile  Makefile.in
SYMPHONY/Applications/SPP+CUTS/: INSTALL  Makefile  Makefile.in  Makefile.orig
SYMPHONY/Applications/USER/: INSTALL  Makefile  Makefile.in  Makefile.orig  sample.mps
SYMPHONY/Applications/VRP/: INSTALL  Makefile.in  Makefile.orig  README
SYMPHONY/Datasets/: illcond1.mps  lecture.mps  lecture2.mps  testset1.mps  testset2.mps  testset3.mps  testset4.mps  testset5.mps  testset6.mps  testset7.mps
SYMPHONY/Doc/: README-2.8  README-3.0  README-3.0.1  README-5.0  Walkthrough.tex  biblio.tex  man-API.tex  man-SYMPHONY.tex  man-background.tex  man-callable.tex  man-cg.tex  man-cp.tex  man-design.tex  man-dg.tex  man-intro.tex  man-lp.tex  man-param.tex  man-start.tex  man-tm.tex  man.tex
SYMPHONY/Examples/: Makefile  Makefile.in  README  bicriteria.c  milp.c  milp2.c  milpOsi.c  milpOsi2.c  sensitivity.c  warm_start1.c  warm_start2.c  warm_start3.c
SYMPHONY/Examples/FLOPC++/: Makefile
SYMPHONY/MSVisualStudio/: sym.mak
SYMPHONY/MSVisualStudio/v10/: libOsiSym.vcxproj  libSymphony.vcxproj  symphony.sln  symphony.vcxproj  unitTest.vcxproj
SYMPHONY/MSVisualStudio/v6/: libSymphony.dsp  symphony.dsp  symphony.dsw
SYMPHONY/MSVisualStudio/v7/: libSymphony.vcproj  symphony.sln  symphony.vcproj
SYMPHONY/MSVisualStudio/v8/: libSymphony.vcproj  symphony.sln  symphony.vcproj  unitTest.sln  unitTest.vcproj
SYMPHONY/MSVisualStudio/v9/: libOsiSym.vcproj  libSymphony.vcproj  symphony.sln  symphony.vcproj  unitTest.sln  unitTest.vcproj
SYMPHONY/include/: BB_constants.h  BB_macros.h  BB_types.h  OsiSymConfig.h  SymConfig.h  cg.h  cg_params.h  cg_u.h  config.h  config.h.in  config_default.h  config_sym.h  config_sym.h.in  config_sym_default.h  cp.h  cp_params.h  cp_u.h  dg.h  dg_params.h  dg_u.h  lp.h  lp_params.h  lp_solver.h  lp_u.h  master.h  master_params.h  master_u.h  messages.h  pack_array.h  pack_cut.h  proccomm.h  proto.h  qsortucb.h  return_values.h  rounding.h  sym_bach.h  sym_bach_types.h  sym_cg.h  sym_cg_params.h  sym_cg_u.h  (+40 more)
SYMPHONY/include/decomp/: decomp.h
SYMPHONY/scripts/: publish2  reformat.awk  report.py
SYMPHONY/src/: Makefile.am  Makefile.in
SYMPHONY/src/Common/: pack_array.c  pack_cut.c  proccomm.c  qsortucb_di.c  sym_qsort.c  timemeas.c
SYMPHONY/src/CutGen/: cg_func.c  cg_proccomm.c  cg_wrapper.c  cut_gen.c  cut_gen.cpp
SYMPHONY/src/CutPool/: cp_func.c  cp_proccomm.c  cp_wrapper.c  cut_pool.c  cut_pool.cpp
SYMPHONY/src/DrawGraph/: draw_graph.c  tester.c
SYMPHONY/src/GMPL/: Makefile.am  Makefile.in  README  glpavl.c  glpdmp.c  glpdmp.h  glplib.h  glplib1a.c  glplib2.c  glplib3.c  glpmpl.h  glpmpl1.c  glpmpl2.c
SYMPHONY/src/Heuristics/: feasibility_pump.c  rounding.c  sp.c  warm_search.c
SYMPHONY/src/LP/: feasibility_pump.c  lp.c  lp_branch.c  lp_free.c  lp_genfunc.c  lp_heuristics.c  lp_proccomm.c  lp_pseudo_branch.c  lp_rowfunc.c  lp_solver.c  lp_sp.c  lp_varfunc.c  lp_wrapper.c  sp.c
SYMPHONY/src/Master/: main.c  main.cpp  master.c  master.cpp  master_func.c  master_io.c  master_prep.c  master_prep_base.c  master_prep_sr.c  master_wrapper.c  prep.c  prep_sr.c
SYMPHONY/src/OsiSym/: Makefile.am  Makefile.in  OsiSymConfig.hpp  OsiSymSolverInterface.cpp  OsiSymSolverInterface.hpp  OsiSymSolverParameters.hpp  SymWarmStart.cpp  SymWarmStart.hpp  config_osisym.h.in  osi-sym-uninstalled.pc.in  osi-sym.pc.in
SYMPHONY/src/Preprocessor/: README  TODO  prep.c  prep_base.c  prep_sr.c  preprocessor.c  preprocessor_advanced.c  preprocessor_basic.c  preprocessor_func.c
SYMPHONY/test/: Makefile  Makefile.am  Makefile.in  OsiSolverInterfaceTest.cpp  OsiSymSolverInterfaceTest.cpp  unitTestSym.cpp
src/: Makefile.am  Makefile.in
src/Common/: pack_array.c  pack_cut.c  proccomm.c  qsortucb.c  qsortucb_di.c  qsortucb_i.c  qsortucb_ic.c  qsortucb_id.c  qsortucb_ii.c  timemeas.c
src/CutGen/: cg_func.c  cg_proccomm.c  cg_wrapper.c  cut_gen.c  cut_gen.cpp
src/CutPool/: cp_func.c  cp_proccomm.c  cp_wrapper.c  cut_pool.c  cut_pool.cpp
src/DrawGraph/: draw_graph.c  tester.c
src/GMPL/: glpavl.h  glpmpl3.c  glpmpl4.c  glprng.c  glprng.h
src/LP/: lp.c  lp.cpp  lp_branch.c  lp_free.c  lp_genfunc.c  lp_heuristics.c  lp_proccomm.c  lp_pseudo_branch.c  lp_rowfunc.c  lp_solver.c  lp_sp.c  lp_varfunc.c  lp_wrapper.c
src/Master/: main.c  main.cpp  master.c  master.cpp  master_func.c  master_io.c  master_prep.c  master_prep_sr.c  master_wrapper.c
src/OsiSym/: Makefile.am  Makefile.in  OsiSymSolverInterface.cpp  OsiSymSolverInterface.hpp  SymWarmStart.cpp  osi-sym.pc.in
src/RVF/: restricted_vf.c
src/TreeManager/: tm_func.c  tm_proccomm.c  treemanager.c  treemanager.cpp
src/WIN32/: sym.mak  symphony.dsp  symphony.dsw  symphonyLib.dsp  template.dsp  template.dsw  user.dsp  user.dsw  vrp.dsp  vrp.dsw
stable/5.1/: Externals.release  Externals.stable  Makefile.am  README  configure  configure.ac
test/: Makefile.am  Makefile.in  OsiSymSolverInterfaceTest.cpp  unitTestSym.cpp
(+8069 files in other folders)
